# Unit3DWebUp

./: .dockerignore  .env(example)  .gitignore  404.html  Dockerfile  Dockerfile.backend  Dockerfile.frontend  README.md  README.rst  build.yml  docker-compose.yml  index.html  install.yml  pyproject.toml  requirements.txt  start.py  start24.py
UI/: .gitignore  README.md  pubspec.yaml
UI/lib/: app.dart  main.dart
UI/nginx/: default.conf
UI/web/: index.html  manifest.json
config/: __init__.py  api_data.py  constants.py  host_data.py  logger.py  settings.py  tags.py  trackers.py
docs/: mkdocs.yml
docs/docs/: build.md  index.md  install.md
guide/: index.html
install/: index.html
models/: media.py  media_info.py  movie.py  tv.py  tvdb_search.py
repositories/: db_online.py  interfaces.py  job_repos.py  media_info_factory.py
search/: search_index.json
services/: auto_async_service.py  create_torrent_service.py  itt_tracker_helper.py  itt_tracker_service.py  lifespan_service.py  media_service.py  tmdb.py  torrent_client_service.py  torrent_service.py  tvdb.py  upload_service.py  utility.py  video_service.py
unit3dwup/: start.py
unit3dwup/config/: __init__.py  api_data.py  constants.py  host_data.py  itt.py  logger.py  settings.py  sis.py  tags.py  trackers.py
unit3dwup/docs/: mkdocs.yml
unit3dwup/models/: __init__.py  interfaces.py  keywords.py  media.py  media_info.py  movie.py  subtitles.py  tv.py  tvdb_search.py  videos.py
unit3dwup/repositories/: __init__.py  db_online.py  interfaces.py  job_repos.py  media_info_factory.py
unit3dwup/services/: auto_async_service.py  create_torrent_service.py  interfaces.py  itt_tracker_helper.py  itt_tracker_service.py  tmdb.py  (+8 more)
use_case/: make_torrent_usecase.py  process_all_usecase.py  scan_media_usecase.py  seed_usecase.py  upload_usecase.py
(+50 files in other folders)
