[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["dependencies"]
name = "Unit3DupWeb"
version = "0.0.0"
description = "A Unit3D uploader with a web interface"
readme = "README.rst"
requires-python = ">=3.12"
license =  "GPL 3.0"

authors = [
  { name = "Parzival" }
]

[project.urls]
Homepage = "https://github.com/31December99/Unit3DupWeb"


[tool.setuptools.packages.find]
where = ["."]
exclude = ["venv*",".venv*", "tests*", "docs*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}


[project.scripts]
unit3dupweb = "start:main"


